fix meeting schedule function & fix alert overlap issue (#513)
* change stacking order of alert and contact details

* fix alert renderer

* fix invite function in meeting page

--- a/src/components/AlertDisplay/styles.scss
+++ b/src/components/AlertDisplay/styles.scss
@@ -4,4 +4,5 @@
   left: 0;
   width: 100%;
   height: 0;
+  z-index: 10;
 }
