--- a/src/components/ContactDetailsView/styles.scss
+++ b/src/components/ContactDetailsView/styles.scss
@@ -6,7 +6,7 @@
   @include full-size;
   position: absolute;
   top: 0;
-  z-index: 10;
+  z-index: 2;
 }
 
 .content {
